// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`no-semi.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
a
;::b.c

class A {
  a = b;
  in
  c

  a = b;
  instanceof(){}
}

=====================================output=====================================
a
;::b.c

class A {
  a = b;
  in
  c

  a = b;
  instanceof() {}
}

================================================================================
`;

exports[`no-semi.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a
;::b.c

class A {
  a = b;
  in
  c

  a = b;
  instanceof(){}
}

=====================================output=====================================
a;
::b.c;

class A {
  a = b;
  in;
  c;

  a = b;
  instanceof() {}
}

================================================================================
`;
